# isaiops-problems

./: .gitignore  Dockerfile  pyproject.toml
app/: config.py  database.py  main.py  seed.py
app/api/: alerts.py  problems.py  silences.py  stats.py
app/clients/: anomaly_client.py
app/models/: __init__.py  alert.py  alert_event.py  alert_timeline.py  problem.py  problem_event.py  problem_note.py  problem_timeline.py  silence_rule.py
app/services/: aggregator.py  event_fetcher.py  problem_aggregator.py  silence_matcher.py
k8s/: configmap.yaml  deployment.yaml  service.yaml
tests/: conftest.py  test_problems_api.py
