[project]
name = "isaiops-problems"
version = "0.1.0"
description = "AIOps 问题聚合服务 — 将异常事件聚合为告警工单"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.34",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
